# ch58x-cmake-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: toolchain.cmake
openwch/: CMakeLists.txt
src/: main.c
